--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -157,7 +157,7 @@ jobs:
           sarif_file: snyk-code.sarif
 
   DAST:
-    name: Static Application Security Testing (ZAP-SAST)
+    name: Dynamic Application Security Testing (ZAP-DAST)
     needs: SAST_Analysis
     runs-on: ubuntu-latest
     permissions:
@@ -195,11 +195,22 @@ jobs:
           allow_issue_writing: true
           artifact_name: zap-scan-report
 
+      - name: Debug File Structure
+        run: |
+          if [ -d "./zap/reports" ]; then
+            echo "Directory ./zap/reports exists."
+          else
+            echo "Directory ./zap/reports does not exist. Creating it..."
+            mkdir -p ./zap/reports
+          fi
+          ls -R ./zap/
+
       - name: Upload ZAP Scan Artifact
         uses: actions/upload-artifact@v4
         with:
           name: zap-scan-report
           path: ./zap/reports
+
 
   CodeScanAIReport:
     name: CodeScanAI Report Generation
