--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -186,6 +186,16 @@ jobs:
       - name: check if flask is running
         run: curl -I http://localhost:5000 || exit 1
 
+      - name: debug file structure 1
+        run: |
+          if [ -d "./zap/reports" ]; then
+            echo "Directory ./zap/reports exists."
+          else
+            echo "Directory ./zap/reports does not exist. Creating it..."
+            mkdir -p ./zap/reports
+          fi
+          ls -R ./zap/
+
       - name: run zap full scan
         uses: zaproxy/action-full-scan@v0.10.0
         with:
@@ -194,7 +204,7 @@ jobs:
           issue_title: 'zap security full scan findings'
           fail_action: false
           allow_issue_writing: true
-          artifact_name: "run zap full scan"
+          artifact_name: zap-scan-report
 
       - name: debug file structure
         run: |
@@ -209,7 +219,7 @@ jobs:
       - name: upload zap scan artifact
         uses: actions/upload-artifact@v4
         with:
-          name: zapscanreport
+          name: zap-scan-report
           path: ./zap/reports
 
 
