--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -205,6 +205,7 @@ jobs:
           fail_action: false
           allow_issue_writing: true
           artifact_name: zap-scan-report
+          continue-on-error: true
 
       - name: debug file structure
         run: |
