--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -197,15 +197,14 @@ jobs:
           ls -R ./zap/
 
       - name: run zap full scan
-        uses: zaproxy/action-full-scan@v0.10.0
+        uses: zaproxy/action-full-scan@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://localhost:5000'
-          issue_title: 'zap security full scan findings'
-          fail_action: false
-          allow_issue_writing: true
-          artifact_name: zap-scan-report
-          continue-on-error: true
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
+
 
       - name: debug file structure
         run: |
