--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -281,3 +281,24 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3  # Fixed: Changed v4 -> v3
         with:
           sarif_file: codescanai_report.sarif
+
+  kubeSecScan:
+    name: kubernetSecScan-manifesto
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run kubesec scanner
+        uses: controlplaneio/kubesec-action@master
+        with:
+          input: kind-cluster.yaml
+          exit-code: "0"
+          format: template
+          template: template/sarif.tpl
+          output: kubesec-results.sarif
+
+      - name: Upload Kubesec scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: kubesec-results.sarif
