--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -293,7 +293,7 @@ jobs:
       - name: Run kubesec scanner
         uses: controlplaneio/kubesec-action@main
         with:
-          input: kind-cluster.yaml
+          input: \k8s\kind-cluster.yaml
           exit-code: "0"
           format: template
           template: template/sarif.tpl
