--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -286,6 +286,10 @@ jobs:
     name: kubernetSecScan-manifesto
     runs-on: ubuntu-20.04
     needs: dockertest
+    continue-on-error: true
+    permissions:
+      issues: write
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -293,7 +297,7 @@ jobs:
       - name: Run kubesec scanner
         uses: controlplaneio/kubesec-action@main
         with:
-          input: /github/workspace/k8s/kind-cluster.yaml
+          input: /github/workspace/k8s/*.yaml
           exit-code: "0"
           format: json
           template: template/sarif.tpl
