--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -283,21 +283,30 @@ jobs:
           sarif_file: codescanai_report.sarif
 
   kubeSecScan:
-    name: kubernetSecScan-manifesto
-    runs-on: ubuntu-20.04
+    name: Kubernetes Security Scan
+    runs-on: ubuntu-latest
     needs: dockertest
     continue-on-error: true
     permissions:
       issues: write
       security-events: write
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Run Kubesec scan
+      - name: Run Kubesec Scan
+        id: kubesec
         uses: controlplaneio/kubesec-action@main
         with:
           input: k8s/test/web-test.yaml
           format: json
-          output: kubesec-results.json
-          
+          template: template/sarif.tpl
+          output: kubesec-results.sarif
+          exit-code: 0
+
+      - name: Upload Kubesec Scan Results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: kubesec-results.sarif
+
