--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -300,17 +300,17 @@ jobs:
         uses: controlplaneio/kubesec-action@main
         with:
           input: k8s/test/web-test.yaml
-          format: template
-          template: '@/templates/sarif.tpl'
+          format: json
+          template: template/sarif.tpl
           output: kubesec-results.sarif
           exit-code: 0
 
       - name: Debug SARIF Output
         run: cat kubesec-results.sarif    
 
-      - name: Run KubeSec
-        run: |
-          kubesec scan k8s/test/web-test.yaml --format sarif > kubesec-results.sarif
+      #- name: Run KubeSec
+      #  run: |
+      #    kubesec scan k8s/test/web-test.yaml --format sarif > kubesec-results.sarif
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
