--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -307,7 +307,7 @@ jobs:
 
       - name: Convert Kubesec JSON to SARIF
         run: |
-          echo '{
+          jq '{
             "version": "2.1.0",
             "runs": [
               {
@@ -319,27 +319,19 @@ jobs:
                     "rules": []
                   }
                 },
-                "results": []
+                "results": [
+                  .[] | select(.scoring.advise != null) | {
+                    "ruleId": .scoring.advise[].id,
+                    "message": { "text": .message },
+                    "locations": [ { "physicalLocation": { "artifactLocation": { "uri": .fileName } } } ]
+                  }
+                ]
               }
             ]
-          }' > kubesec-results.sarif
-
-          jq '. | { 
-            "version": "2.1.0",
-            "runs": [ { 
-              "tool": { "driver": { "name": "KubeSec", "informationUri": "https://kubesec.io", "version": "1.0.0" } }, 
-              "results": [ 
-                .[] | select(.scoring.advise != null) | { 
-                  "ruleId": .scoring.advise[].id, 
-                  "message": { "text": .message }, 
-                  "locations": [ { "physicalLocation": { "artifactLocation": { "uri": .fileName } } } ] 
-                } 
-              ] 
-            } ] 
-          }' kubesec-results.json >> kubesec-results.sarif
-
+          }' kubesec-results.json > kubesec-results.sarif
+        
       - name: Debug SARIF Output
-        run: cat kubesec-results.sarif    
+        run: cat kubesec-results.sarif  
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
