--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -96,7 +96,8 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: 'python'
+          'java,python,javascript'
+          queries: security-extended 
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
