--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -94,20 +94,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: 'java,python,javascript'  # Update with all needed languages
+          languages: 'java'
           queries: security-extended
 
-      - name: Autobuild project
-        uses: github/codeql-action/autobuild@v3
+      - name: Build with Ant
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ant
+          ant
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
           category: 'security'
           upload: 'always'
+
 
   DAST_SAST_snyk_AI:
     name: Snyk Application Security Testing (DAST - SAST - SAC)
